--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.main.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.main.username=root
 spring.datasource.main.password=password
-spring.datasource.main.url=jdbc:mysql://db:3306/main?createDatabaseIfNotExist=true
+spring.datasource.main.url=jdbc:mysql://localhost:3306/main?createDatabaseIfNotExist=true
 spring.datasource.main.testWhileIdle = true
 spring.datasource.main.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.main.validationQuery = SELECT 1
@@ -9,7 +9,7 @@ spring.datasource.main.validationQuery = SELECT 1
 spring.datasource.archive.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.archive.username=root
 spring.datasource.archive.password=password
-spring.datasource.archive.url=jdbc:mysql://db:3306/archive?createDatabaseIfNotExist=true
+spring.datasource.archive.url=jdbc:mysql://localhost:3306/archive?createDatabaseIfNotExist=true
 spring.datasource.archive.testWhileIdle = true
 spring.datasource.archive.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.archive.validationQuery = SELECT 1
@@ -19,6 +19,7 @@ spring.datasource.archive.validationQuery = SELECT 1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
+spring.jpa.database=mysql
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
@@ -30,6 +31,7 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.generate-ddl=true
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
