--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.datasource.main.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.main.username=root
 spring.datasource.main.password=password
-spring.datasource.main.url=jdbc:mysql://localhost:3306/main?createDatabaseIfNotExist=true
+spring.datasource.main.url=jdbc:mysql://db:3306/main?createDatabaseIfNotExist=true
 spring.datasource.main.testWhileIdle = true
 spring.datasource.main.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.main.validationQuery = SELECT 1
@@ -9,7 +9,7 @@ spring.datasource.main.validationQuery = SELECT 1
 spring.datasource.archive.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.archive.username=root
 spring.datasource.archive.password=password
-spring.datasource.archive.url=jdbc:mysql://localhost:3306/archive?createDatabaseIfNotExist=true
+spring.datasource.archive.url=jdbc:mysql://db:3306/archive?createDatabaseIfNotExist=true
 spring.datasource.archive.testWhileIdle = true
 spring.datasource.archive.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.archive.validationQuery = SELECT 1
