THis code when checked out will have the whole Archivability working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,13 @@ spring.datasource.archive.testWhileIdle = true
 spring.datasource.archive.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.archive.validationQuery = SELECT 1
 
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+
 #server.port=8081
+
+cronvalue= 0 * * ? * *
+numberOfMonths = 3
 
 # ===============================
 # = JPA / HIBERNATE
