--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.8"
 services:
-  web:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
+#  web:
+#    build: .
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - db
   db:
-    image: mysql:5.7
+    build: ./mysql/
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: 'main'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
       # You can use whatever password you like
