--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 services:
-  web:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
+#  web:
+#    build: .
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - db
   db:
     build: ./mysql/
     restart: always
