This code when checked out will have all code cleaned up and the Retract Movie bug fixed

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,6 +19,9 @@ spring.jpa.properties.hibernate.batch_versioned_data=true
 
 #server.port=8081
 
+cronvalue= 0 * * ? * *
+numberOfMonths = 3
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
